Update to Java 17, port in Host header added only for not default ports.